Fix subtitle to prevent word wrap

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -28,7 +28,8 @@
   }
 
   .intro-subtitle {
-    margin-bottom: 1.5rem;
+    @include fluid-type($min-vw, $max-vw, 12px, 28px);
+    margin-bottom: 1rem;
   }
 }
 
